test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-owned-from-nonnil-unmanaged.good
init-field-arg-nonnil-owned-from-nonnil-unmanaged.chpl:9: In initializer:
init-field-arg-nonnil-owned-from-nonnil-unmanaged.chpl:10: error: invalid copy-initialization
init-field-arg-nonnil-owned-from-nonnil-unmanaged.chpl:10: error: cannot initialize 'owned MyClass' from a 'unmanaged MyClass'
  init-field-arg-nonnil-owned-from-nonnil-unmanaged.chpl:14: called as MyRecord.init(rhs: borrowed MyClass)
